[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"
author = "Andrew Less"
about = "A todo list"
long_about = "a list you control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
