[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"
author = "Andrew Less"
about = "A todo list"
long_about = "a list you control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
console = "0.15.7"
dialoguer = "0.11.0"
directories = "5.0.1"
tui = "0.19.0"

[[bin]]
name = "todo"
path = "src/main.rs"
